@@ -1,3 +1,8 @@
+2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/Gnuplot2.py (_FileClass): update for current Gnuplot.py
+	from SVN, thanks to a patch by Ryan Woodard <rywo@bas.ac.uk>.
+
 2006-03-12  Ville Vainio  <vivainio@gmail.com>
 
 	* Magic.py (magic_timeit): Added %timeit magic, contributed by
